--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   background-color: #6e763f;
 }
 
-
 /* HOME PAGE */
 
 .mainDiv {
@@ -64,7 +63,6 @@ body {
 
 /* DASHBOARD */
 
-
 .dashDiv {
   display: flex;
   flex-direction: column;
@@ -72,26 +70,20 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
-}
-
-.top-section {
-  display: flex;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .datetime {
-  padding: 1rem .5rem;
+  padding: 1rem 0.5rem;
   background-color: #fef6f0;
   border: 4px solid #cac7b1;
   border-radius: 25px;
   box-shadow: 2px 2px 4px rgba(21, 30, 8, 0.6);
-  text-align: center;
-  justify-content: center;
-  align-items: center;
   display: flex;
-  flex-direction: column;
-  gap: 12px;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 400px;
 }
 #day {
   font-family: "Pixelify Sans";
@@ -111,15 +103,35 @@ body {
   font-size: 16px;
 }
 
-.right-section {
+.task-section {
+  background-color: #fef6f0;
+  border: 4px solid #cac7b1;
+  border-radius: 20px;
+  box-shadow: 2px 2px 4px rgba(21, 30, 8, 0.6);
+  width: 400px;
+}
+.tasks-title {
+  padding: 0.5rem;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+  font-family: "Pixelify Sans";
+  font-size: 18px;
+  font-weight: 100;
+  gap: 2rem;
+}
 
+.tasks-number {
+  font-family: "Press Start 2P", cursive;
+  font-size: 12px;
+  font-weight: 100;
+  color: #fef6f0;
+  background-color: #6e763f;
+  border-radius: 50px;
+  padding: 10px 5px;
 }
 
 .progression {
-padding: .5rem;
+  padding: 0.5rem;
   background-color: #fef6f0;
   border: 4px solid #cac7b1;
   border-radius: 25px;
@@ -129,18 +141,26 @@ padding: .5rem;
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  gap: 0.5rem;
+  width: 400px;
 }
+
 .progression h3 {
   font-family: "Pixelify Sans";
   font-size: 20px;
   font-weight: 600;
 }
+
+.progress-section{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
 #progress-bar {
   appearance: none;
   height: 16px;
-  width: 70%;
   border-radius: 10px;
+  width: 280px;
 }
 #progress-bar::-webkit-progress-bar {
   background-color: #cac7b1;
@@ -152,11 +172,16 @@ padding: .5rem;
   transition: width 0.5s ease-in-out;
 }
 
+#progress-percentage {
+  font-family: "Press Start 2P", cursive;
+  font-size: 12px;
+}
 .add-task {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: .5rem;
+  gap: 0.5rem;
+  width: 400px;
 }
 .add-task input {
   outline: none;
@@ -164,8 +189,8 @@ padding: .5rem;
   padding: 14px;
   border-radius: 20px;
   background-color: #fef6f0;
-
-    border: 4px solid #cac7b1
+  width: -webkit-fill-available;
+  border: 4px solid #cac7b1;
 }
 .add-task button {
   font-size: 24px;
@@ -184,13 +209,8 @@ padding: .5rem;
 .bottom-section {
   display: flex;
   flex-direction: column;
-  width: 400px;
   height: 300px;
   overflow-y: scroll;
-  background-color: #fef6f0;
-  border: 4px solid #cac7b1;
-  border-radius: 25px;
-  box-shadow: 2px 2px 4px rgba(21, 30, 8, 0.6);
   padding: 16px;
   gap: 14px;
 }
@@ -236,6 +256,7 @@ padding: .5rem;
   font-weight: 400;
   font-size: 48px;
   color: #fef6f0;
+  text-align: center;
 }
 
 .finalDiv .center-image {
@@ -258,8 +279,9 @@ padding: .5rem;
 }
 
 #conclusion {
-  font-family: "Pixelify Sans";
-  font-size: 24px;
+  font-family: "Press Start 2P", cursive;
+  text-align: center;
+  font-size: 14px;
   margin-bottom: 16px;
 }
 
@@ -294,32 +316,48 @@ padding: .5rem;
 }
 
 /* MOBILE STYLES  */
-@media (max-width: 600px) {
-.top-section {
-  gap: .5rem;
-}
+@media (max-width: 650px) {
+  .datetime {
+    width: 350px;
+  }
 
-#day {
-  font-size: 18px;
-  font-weight: 400;
-}
-#number {
-  font-size: 30px;
-  padding: 8px 12px;
-}
-#month {
-  font-size: 14px;
-}
-.progression h3 {
-  font-size: 18px;
-}
+  .task-section {
+    width: 350px;
+  }
 
-.add-task input{
-  padding: 5px;
+  .add-task {
+    width: 350px;
+  }
+  .progression {
+    width: 350px;
+  }
 
-}
-.bottom-section{
-  width: 350px;
-}
+  #final-title {
+    font-size: 38px;
+  }
+  #day {
+    font-size: 18px;
+    font-weight: 400;
+  }
+  #number {
+    font-size: 30px;
+    padding: 8px 12px;
+  }
+  #month {
+    font-size: 14px;
+  }
+  .progression h3 {
+    font-size: 18px;
+  }
 
+  .add-task input {
+    padding: 5px;
+  }
+  .bottom-section {
+    height: 250px;
+  }
+
+#progress-bar {
+  width: 210px;
+}
 }
